refactor into features and add module for angular

--- a/Project2/src/Project2/wwwroot/styles.css
+++ b/Project2/src/Project2/wwwroot/styles.css
@@ -15,7 +15,7 @@
 .blog-header {
     color: #FFFFFF;
     background-color: #404040;
-    background-image: url("blogbanner.png")
+    background-image: url("blog/blogbanner.png")
     /*border-bottom: 1px solid #e5e5e5;*/
 }
 
