lightning outside, barely stable

--- a/Project4/src/Project4/wwwroot/site.css
+++ b/Project4/src/Project4/wwwroot/site.css
@@ -1,3 +1,15 @@
 ﻿[ng\:cloak], [ng-cloak], .ng-cloak {
     display: none;
 }
+.btn.nohover:hover {
+    /* here copy default .btn class styles */
+    cursor:default !important;
+    /* or something like that */
+}
+
+.sortorder:after {
+  content: '\25b2';
+}
+.sortorder.reverse:after {
+  content: '\25bc';
+}
